--- a/index.html
+++ b/index.html
@@ -57,8 +57,19 @@
                 </div>
             </div>
         </div>
+        <div id="chat" class="row">
+            <label for="lastMessages">Messages</label>
+            <textarea readonly class="form-control" id="lastMessages" rows="5"></textarea>
+            <div id="nameForm" class="input-group mb-3">
+                <input id="sendMessage" type="text" class="form-control" placeholder="Insert here your message" aria-label="Message" aria-describedby="btn-message">
+                <div class="input-group-append">
+                    <button class="btn btn-outline-primary" type="button" id="send">Send</button>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
     <script src="https://kit.fontawesome.com/99d86a1013.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.2.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.2.0/firebase-database.js"></script>
